--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -1,5 +1,5 @@
 name: learn-github-actions
-run-name: ${{github.actor}} is learning Github Actions
+run-name: ${{github.actor}} is learning Github Actions ok man
 on: [push]
 jobs: 
   check-bats-version:
